cmake_minimum_required (VERSION 2.8.2)
PROJECT(DYCOLA CXX)
SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)
SET(CMAKE_CXX_FLAGS "-std=c++11")
INCLUDE_DIRECTORIES(./include)
project (STREAMING CXX)
FILE(GLOB COMMON_SOURCE_FILES "source/*.cpp")
add_executable(streamcom "source/streamcom/main.cpp" ${COMMON_SOURCE_FILES})
